# BRUH

./: .gitignore  .gitmodules  README.md
Editor/: CMakeLists.txt
Editor/.cache/clangd/index/: App.cpp.F05B1813188B93B5.idx  EditorLayer.cpp.08D3B2B6EFB42334.idx  EditorLayer.h.E159FE0B76925EDB.idx  cmake_pch.hxx.466BCA3F646D0A04.idx  cmake_pch.hxx.cxx.30999465AAE84B49.idx
Editor/res/: imgui.ini
Editor/res/config/: scene.yaml  test.xml
Editor/res/scripts/: Test.cpp  Test.h  test.lua  test3.luaa
Editor/res/shaders/: color.glsl  tux.glsl
Editor/res/shaders/Shaders2D/: config.xml  tux_shader.glsl
Editor/src/: App.cpp  EditorCamera.cpp  EditorCamera.h  EditorLayer.cpp  EditorLayer.h  HelperWindows.cpp  HelperWindows.h  MenuBar.cpp  MenuBar.h
Editor/src/Panels/: AssetManagerGui.cpp  AssetManagerGui.h  ContentBrowser.cpp  ContentBrowser.h  Inspector.cpp  Inspector.h  SceneHierarchy.cpp  SceneHierarchy.h
Karen/: CMakeLists.txt  architecture.c
Karen/.cache/clangd/index/: App.cpp.A423C6F45E11EA69.idx  App.cpp.B13664DB33E59D0F.idx  App.h.62E5C592DADAB66F.idx  App.h.F5B8C1CA67291088.idx  AppEvents.h.4B96124D15085B0A.idx  AppEvents.h.F8C8736F8870B31F.idx  BufferLayout.h.7F5670AB3034E1B2.idx  ButtonsAndKeyCodes.h.1FFB241B84CA6ADF.idx  ButtonsAndKeyCodes.h.D93629450843856C.idx  Context.h.F2794F19C2F23E32.idx  Core.h.327AB13DB8287602.idx  Core.h.BC7B733863EF49E4.idx  EntryPoint.h.374324ED099AFED7.idx  EntryPoint.h.7F099C643DE19B5B.idx  Event.h.8C4D501F894C8338.idx  Event.h.DD8E8C17F4794BA5.idx  Events.h.0CC092B459460935.idx  Events.h.12A77CEC1B5B6098.idx  FileLoader.cpp.4C06472BDB28A900.idx  FileLoader.h.6662DE5EBDE4002B.idx  GuiLayer.cpp.3BA58CC1BA911550.idx  GuiLayer.cpp.E7CEB903FC2FEBB9.idx  GuiLayer.h.10BC527657BD62A5.idx  GuiLayer.h.ECE5DBF91BFB1FD2.idx  IndexBuffer.cpp.D24F0D9D0AB20B83.idx  IndexBuffer.h.879E4E46BB3CC4E5.idx  Input.cpp.0CAADC26827768D3.idx  Input.cpp.C85B7C9756078336.idx  Input.h.1D3F0D01F9E8EEDC.idx  Input.h.3AD1372D0703C5CA.idx  Input.hpp.59BBC04D08E97CC7.idx  Karen.h.08B0D07FA81BECD1.idx  Karen.h.20059DAF218BF9AC.idx  KeyEvents.h.1BE4149320DCC0C4.idx  KeyEvents.h.D563C1C0E33F307B.idx  Layer.cpp.34ED116FEB09BB94.idx  Layer.cpp.6C915AC5617B544C.idx  Layer.h.8CECF3BDD9BF81A2.idx  Layer.h.8D18E9D351AF0D71.idx  LayerStack.cpp.260819D141AFC381.idx  (+445 more)
Karen/include/: Karen.h
Karen/include/Karen/: Karen.h
Karen/src/: pch.h
Karen/src/Karen/: App.cpp  App.h  ButtonsAndKeyCodes.h  Camera.h  Core.h  EntryPoint.h  Input.cpp  Input.h  Log.cpp  Log.h  Window.h
Karen/src/Karen/CommanUtils/: FileLoader.cpp  FileLoader.h
Karen/src/Karen/Core/: App.cpp  App.h  Assertion.h  AssetManager.cpp  AssetManager.h  AssetManager.test.h  ButtonsAndKeyCodes.h  Core.h  EntryPoint.h  ExportType.h  Input.cpp  Input.h  Instrumentor.h  Log.cpp  Log.h  Macros.h  Timestep.h  UUID.cpp  UUID.h  Window.h  a.out
Karen/src/Karen/Core/CommanUtils/: FileLoader.cpp  ImageLoader.cpp  ImageLoader.h
Karen/src/Karen/Core/Events/: AppEvents.h  MouseEvents.h
Karen/src/Karen/Core/Layers/: GuiLayer.cpp  GuiLayer.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h
Karen/src/Karen/Core/Math/: math.cpp  math.h
Karen/src/Karen/Core/Utils/: FileDialogs.h  FileLoader.cpp  ImageLoader.cpp
Karen/src/Karen/Events/: AppEvents.h  Event.h  Events.h  KeyEvents.h  MouseEvents.h
Karen/src/Karen/Layers/: GuiLayer.cpp  GuiLayer.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h
Karen/src/Karen/Math/: math.h
Karen/src/Karen/Physics/Physics2D/: Collisions.cpp  Collisions.h  PhysicsWorld2D.cpp  PhysicsWorld2D.h  RigidBody.cpp  RigidBody.h
Karen/src/Karen/Render/: Camera.h  OrthographicCamera.cpp  OrthographicCamera.h  OrthographicCameraController.cpp  OrthographicCameraController.h  ShaderManager.cpp  ShaderManager.h
Karen/src/Karen/Render/API/: BufferLayout.h  Context.h  FrameBuffer.cpp  FrameBuffer.h  IndexBuffer.cpp  IndexBuffer.h  RenderCommands.cpp  RenderCommands.h  Renderer.cpp  Renderer.h  RendererAPI.h  RendererCapabilities.cpp  RendererCapabilities.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
Karen/src/Karen/Render/Renderer2D/: Renderer2D.cpp  Renderer2D.h
Karen/src/Karen/Scene/: Components.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h  SceneCamera.cpp  SceneCamera.h  SceneSerializer.cpp  SceneSerializer.h  ScriptEntity.h
Karen/src/Karen/Scripting/: Lua.cpp  Lua.h  Script.h  ScriptMaker.h
Karen/src/Render/: OrthographicCamera.cpp  OrthographicCamera.h
Karen/src/Render/API/: BufferLayout.h  Context.h  IndexBuffer.cpp  IndexBuffer.h  RenderCommands.cpp  RenderCommands.h  Renderer.cpp  Renderer.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
Real-Editor/res/scripts/: CMakeLists.txt  test.lua  test2.lua  test2.luaa
Real-Engine/: CMakeLists.txt
Real-Engine/Real-Engine/include/Real-Engine/: Real-Editor.h
Real-Engine/Real-Engine/src/Real-Engine/Core/: Instrumentor.cpp
Real-Engine/Real-Engine/src/Real-Engine/Render/: OrthographicCameraController.h
Real-Engine/include/Real-Engine/: Real-Engine.h
Real-Engine/src/: pch.h
Real-Engine/src/Real-Engine/Core/: App.cpp  App.h  Assertion.h  AssetManager.cpp  AssetManager.h  ButtonsAndKeyCodes.h  Core.h  EntryPoint.h  ExportType.h  Input.h  Instrumentor.cpp  Instrumentor.h  Log.cpp  Log.h  Macros.h  Timestep.h  UUID.cpp  UUID.h  Window.h
Real-Engine/src/Real-Engine/Render/: Camera.h  OrthographicCamera.cpp  OrthographicCamera.h  OrthographicCameraController.cpp  OrthographicCameraController.h  ShaderManager.cpp  ShaderManager.h
Real-Engine/src/Real-Engine/Scene/: Components.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h  SceneCamera.cpp  SceneCamera.h  SceneSerializer.cpp  SceneSerializer.h  ScriptEntity.h
Real-Engine/src/Real-Engine/Scripting/: Lua.cpp  Lua.h  Script.h
examples/Test/: CMakeLists.txt  template.html
examples/Test/res/shaders/: config.xml  fs.glsl  vs.glsl
examples/Test/src/: App.cpp  Sandbox.cpp  Sandbox.h  Sandbox2D.cpp  Sandbox2D.h  Test.cpp
(+150 files in other folders)
