cmake_minimum_required(VERSION 3.28)
project(Test)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED TRUE)
set(CMAKE_EXPORT_COMPILE_COMMANDS 1)
add_subdirectory(../../Karen/ ../../Karen/build/)
add_executable(${PROJECT_NAME} src/Test.cpp)
#target_include_directories(${PROJECT_NAME} PRIVATE ../../Karen/include/
#  ../../Karen/src/ ../../Karen/vendor/spdlog/include/)
#target_include_directories(${PROJECT_NAME} PUBLIC ${KAREN_PUBLIC_INCLUDE_DIRS})
message("==========================")
message("include dirs:" ${KAREN_INCLUDE_DIRS})
message("==========================")
target_include_directories(${PROJECT_NAME} PUBLIC ${KAREN_INCLUDE_DIRS})
target_link_libraries(${PROJECT_NAME} Karen)
if(${KAREN_IS_EMSCRIPTEN})
  set_target_properties(${PROJECT_NAME} PROPERTIES SUFFIX ".html"
    LINK_FLAGS "-sUSE_GLFW=3 -sWASM=0 -sFULL_ES3  --embed-file ${CMAKE_CURRENT_SOURCE_DIR}/res/shaders/vs_gles.glsl@vs_gles.glsl --embed-file ${CMAKE_CURRENT_SOURCE_DIR}/res/shaders/fs_gles.glsl@fs_gles.glsl --bind -DKAREN_EMSCRIPTEN")
endif()
